--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -19,6 +19,6 @@
   },
   "homepage": "https://github.com/stephen-kern/ZooKeepr#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.17.1"
   }
 }
